// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Form Component should render add User form correctly 1`] = `
<div>
  <div
    class="col-md-12 user-form"
  >
    <form
      class="cds--form form-0-2-3 form-react"
      novalidate=""
    >
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Full Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="userid"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Username
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="userid"
              maxlength="255"
              name="userid"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="password"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Password
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="password"
              maxlength="50"
              name="password"
              type="password"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="confirmPassword"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Confirm Password
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="confirmPassword"
              maxlength="50"
              name="confirmPassword"
              type="password"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="email"
          >
            E-mail Address
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="email"
              maxlength="255"
              name="email"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--multi-select__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          id="downshift-0-label"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Available Groups
        </label>
        <div
          class="cds--multi-select cds--list-box"
          id="groups"
        >
          <div
            class="cds--list-box__field--wrapper"
          >
            <button
              aria-activedescendant=""
              aria-controls="downshift-0-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="cds--list-box__field"
              id="downshift-0-toggle-button"
              role="combobox"
              tabindex="0"
              type="button"
            >
              <span
                class="cds--list-box__label"
                id="multiselect-field-label-id-1"
              >
                &lt;Choose one or more Groups&gt;
              </span>
              <div
                class="cds--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </button>
            
          </div>
          <ul
            aria-labelledby="downshift-0-label"
            class="cds--list-box__menu"
            hidden=""
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
      <div>
        <label
          id="selected-groups-label"
        >
          Selected Groups
        </label>
        <div
          id="selected-groups"
        />
      </div>
      <div
        class="cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
          variant="primary"
        >
          Add
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`User Form Component should render copy User form correclty 1`] = `
<div>
  <div
    class="col-md-12 user-form"
  >
    <form
      class="cds--form form-0-2-3 form-react"
      novalidate=""
    >
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Full Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="userid"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Username
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="userid"
              maxlength="255"
              name="userid"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="password"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Password
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="password"
              maxlength="50"
              name="password"
              type="password"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="confirmPassword"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Confirm Password
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="confirmPassword"
              maxlength="50"
              name="confirmPassword"
              type="password"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="email"
          >
            E-mail Address
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="email"
              maxlength="255"
              name="email"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--multi-select__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          id="downshift-6-label"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Available Groups
        </label>
        <div
          class="cds--multi-select cds--list-box"
          id="groups"
        >
          <div
            class="cds--list-box__field--wrapper"
          >
            <button
              aria-activedescendant=""
              aria-controls="downshift-6-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-6-label"
              class="cds--list-box__field"
              id="downshift-6-toggle-button"
              role="combobox"
              tabindex="0"
              type="button"
            >
              <span
                class="cds--list-box__label"
                id="multiselect-field-label-id-18"
              >
                &lt;Choose one or more Groups&gt;
              </span>
              <div
                class="cds--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </button>
            
          </div>
          <ul
            aria-labelledby="downshift-6-label"
            class="cds--list-box__menu"
            hidden=""
            id="downshift-6-menu"
            role="listbox"
          />
        </div>
      </div>
      <div>
        <label
          id="selected-groups-label"
        >
          Selected Groups
        </label>
        <div
          id="selected-groups"
        />
      </div>
      <div
        class="cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
          variant="primary"
        >
          Add
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`User Form Component should render edit Admin User form correclty 1`] = `
<div>
  <div
    class="col-md-12 user-form"
  >
    <form
      class="cds--form form-0-2-3 form-react"
      novalidate=""
    >
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Full Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              disabled=""
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value="Administrator"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="userid"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Username
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              disabled=""
              id="userid"
              maxlength="255"
              name="userid"
              type="text"
              value="admin"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Password
        </legend>
        <div
          class="miq-pwd-field-grid cds--css-grid cds--css-grid--condensed"
        >
          <div
            class="miq-pwd-field-grid-col cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden cds--label--disabled"
                  dir="auto"
                  for="passwordPlaceholder"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    autocomplete="new-password"
                    class="cds--text-input"
                    disabled=""
                    id="passwordPlaceholder"
                    maxlength="50"
                    name="passwordPlaceholder"
                    placeholder="●●●●●●●●"
                    style="z-index: initial;"
                    title="●●●●●●●●"
                    type="password"
                    value=""
                  />
                  
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="miq-pwd-field-edit-icon-grid-col cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-labelledby="tooltip-12"
                  class="cds--btn cds--btn--md cds--layout--size-md cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 26H30V28H2z"
                    />
                    <path
                      d="M25.4,9c0.8-0.8,0.8-2,0-2.8c0,0,0,0,0,0l-3.6-3.6c-0.8-0.8-2-0.8-2.8,0c0,0,0,0,0,0l-15,15V24h6.4L25.4,9z M20.4,4L24,7.6 l-3,3L17.4,7L20.4,4z M6,22v-3.6l10-10l3.6,3.6l-10,10H6z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-12"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Change
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </fieldset>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="email"
          >
            E-mail Address
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="email"
              maxlength="255"
              name="email"
              type="text"
              value="test@email.com"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--multi-select__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--label--disabled"
          id="downshift-4-label"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Available Groups
        </label>
        <div
          class="cds--multi-select cds--list-box cds--list-box--disabled"
          id="groups"
        >
          <div
            class="cds--list-box__field--wrapper"
          >
            <button
              aria-activedescendant=""
              aria-controls="downshift-4-menu"
              aria-disabled="true"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-4-label"
              class="cds--list-box__field"
              disabled=""
              id="downshift-4-toggle-button"
              role="combobox"
              tabindex="0"
              type="button"
            >
              <span
                class="cds--list-box__label"
                id="multiselect-field-label-id-14"
              >
                &lt;Choose one or more Groups&gt;
              </span>
              <div
                class="cds--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </button>
            
          </div>
          <ul
            aria-labelledby="downshift-4-label"
            class="cds--list-box__menu"
            hidden=""
            id="downshift-4-menu"
            role="listbox"
          />
        </div>
      </div>
      <div>
        <label
          id="selected-groups-label"
        >
          Selected Groups
        </label>
        <div
          id="selected-groups"
        />
      </div>
      <div
        class="cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
          variant="primary"
        >
          Save
        </button>
        <button
          class="cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`User Form Component should render edit User form correclty 1`] = `
<div>
  <div
    class="col-md-12 user-form"
  >
    <form
      class="cds--form form-0-2-3 form-react"
      novalidate=""
    >
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Full Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value="test name"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="userid"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Username
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="userid"
              maxlength="255"
              name="userid"
              type="text"
              value="testuser"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Password
        </legend>
        <div
          class="miq-pwd-field-grid cds--css-grid cds--css-grid--condensed"
        >
          <div
            class="miq-pwd-field-grid-col cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden cds--label--disabled"
                  dir="auto"
                  for="passwordPlaceholder"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    autocomplete="new-password"
                    class="cds--text-input"
                    disabled=""
                    id="passwordPlaceholder"
                    maxlength="50"
                    name="passwordPlaceholder"
                    placeholder="●●●●●●●●"
                    style="z-index: initial;"
                    title="●●●●●●●●"
                    type="password"
                    value=""
                  />
                  
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="miq-pwd-field-edit-icon-grid-col cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-labelledby="tooltip-5"
                  class="cds--btn cds--btn--md cds--layout--size-md cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 26H30V28H2z"
                    />
                    <path
                      d="M25.4,9c0.8-0.8,0.8-2,0-2.8c0,0,0,0,0,0l-3.6-3.6c-0.8-0.8-2-0.8-2.8,0c0,0,0,0,0,0l-15,15V24h6.4L25.4,9z M20.4,4L24,7.6 l-3,3L17.4,7L20.4,4z M6,22v-3.6l10-10l3.6,3.6l-10,10H6z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-5"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Change
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </fieldset>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="email"
          >
            E-mail Address
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="email"
              maxlength="255"
              name="email"
              type="text"
              value="test@email.com"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--multi-select__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          id="downshift-2-label"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Available Groups
        </label>
        <div
          class="cds--multi-select cds--list-box"
          id="groups"
        >
          <div
            class="cds--list-box__field--wrapper"
          >
            <button
              aria-activedescendant=""
              aria-controls="downshift-2-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-2-label"
              class="cds--list-box__field"
              id="downshift-2-toggle-button"
              role="combobox"
              tabindex="0"
              type="button"
            >
              <span
                class="cds--list-box__label"
                id="multiselect-field-label-id-7"
              >
                &lt;Choose one or more Groups&gt;
              </span>
              <div
                class="cds--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </button>
            
          </div>
          <ul
            aria-labelledby="downshift-2-label"
            class="cds--list-box__menu"
            hidden=""
            id="downshift-2-menu"
            role="listbox"
          />
        </div>
      </div>
      <div>
        <label
          id="selected-groups-label"
        >
          Selected Groups
        </label>
        <div
          id="selected-groups"
        />
      </div>
      <div
        class="cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
          variant="primary"
        >
          Save
        </button>
        <button
          class="cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
